--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
+  "homepage": "https://Marcos-sco.github.io/todo-frontend/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.11",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "vite": "^7.0.0"
   }
 }
