--- a/todo-frontend/.env-example
+++ b/todo-frontend/.env-example
@@ -1,2 +1,3 @@
 VITE_API_URL=http://localhost:8000/api/todos
 # VITE_API_URL=https://alloytestapi.infinityfreeapp.com/api/todos
+NODE_ENV='localhost'
