refactor: change environment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ name: 🚀 Deploy api on push
 jobs:
   web-deploy:
     name: 🎉 Deploy
-    environment: alloy-api-deploy
+    environment: api-deploy
     runs-on: ubuntu-latest
 
     steps:
