--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "deploy": "vite build && gh-pages -d dist"
   },
-  "homepage": "https://marcos-sco.github.io/todo-before-test/",
+  "homepage": "https://marcos-sco.github.io/vue-todo-list/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.11",
